--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "riddle-game-cli",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "bin": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
